# book

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierrc.toml  Justfile  LICENSE.md  README.md  STYLE.md  book.toml  flake.nix
assets/: mdbook-admonish-custom.css
examples/cargo-workspace/: Cargo.toml
examples/check-formatting/: .gitlab-ci.yml  Cargo.toml
examples/crate_features/: Cargo.toml
examples/example-crate/: Cargo.toml
examples/log-example/: Cargo.toml  Justfile
examples/macro-expand/: Cargo.toml  Justfile
examples/macro-expand/output/: btreemap.rs  json.rs  serialize.rs
examples/macro-expand/src/: btreemap.rs  json.rs  serialize.rs
examples/optional-serde/: Cargo.toml
examples/property-testing/: Cargo.toml  Justfile
graphics/: bubble.js  crate-popularity-async.js  crate-popularity-embedded.js  crate-popularity.js  crates-web.js  notes.txt
scripts/: build.sh
src/: SUMMARY.md  build.md  conclusion.md  documentation.md  ecosystem.md  examples.md  intro.md  license.md  organization.md  platform.md  preface.md  privacy.md  reading.md  testing.md  title.md  whyrust.md
src/build-system/: bazel.md  buck2.md  cargo.md  meson.md  nix.md  readme.md
src/building/: cache.md  codegen.md  cross.md  linker.md  performance.md  readme.md  size.md
src/checks/: audit.md  conclusion.md  deny.md  features.md  formatting.md  lints.md  manifest.md  minimum-version.md  msrv.md  outdated.md  readme.md  semver.md  spelling.md  style.md  unused.md
src/ci/: github.md  gitlab.md  readme.md
src/documentation/: book.md  (+7 more)
theme/: head.hbs
(+104 files in other folders)
