[package]
name = "macro-expand"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[[bin]]
name = "btreemap"
path = "src/btreemap.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "serialize"
path = "src/serialize.rs"
